--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="github-markdown.css">
     <script src="marked.js"></script>
   </head>
-  <body style="min-width: 200px; max-width: 790px; margin-left:auto; margin-right:auto; padding: 30px;">
+  <body style="width: 80%; margin-left:auto; margin-right:auto; padding: 30px;">
     <div id="content" class="markdown-body"></div>
     <script>
     (function() {
