--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
     <link rel="stylesheet" href="github-markdown.css">
-    <style>body { }</style>
     <script src="marked.js"></script>
   </head>
-  <body style="min-width:200px; max-width:790px; margin:auto; padding:16px;">
+  <body style="min-width:200px; max-width:790px; margin:0 auto; padding:16px;">
     <div id="content" class="markdown-body"></div>
     <script>
     (function() {
