--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
     <link rel="stylesheet" href="github-markdown.css">
+    <style>body { }</style>
     <script src="marked.js"></script>
   </head>
-  <body style="min-width:200px; max-width:790px; margin:0 auto; padding:16px;">
+  <body style="min-width:200px; max-width:790px; margin:auto; padding:16px;">
     <div id="content" class="markdown-body"></div>
     <script>
     (function() {
         if (document.location.href.indexOf("http://") == 0) {
-          document.location = "https://goagent.github.io";
-          return;
+            document.location = document.location.href.replace("http:", "https:", 1);
+            return;
         }
         if (window.XMLHttpRequest) {
             var request = new XMLHttpRequest();
@@ -19,16 +20,16 @@
             var request = new ActiveXObject("Microsoft.XMLHTTP");
         }
         request.onreadystatechange = callback;
-        request.open('GET', './README.md', true);
+        request.open("GET", "./README.md", true);
         request.send();
         function callback() {
-          if (request.readyState == 4) {
-            if (request.status >= 200 && request.status < 400){
-              document.getElementById("content").innerHTML = marked(request.responseText);
-            } else {
-              document.location = "https://github.com/goagent/goagent";
+            if (request.readyState == 4) {
+                if (request.status >= 200 && request.status < 400){
+                    document.getElementById("content").innerHTML = marked(request.responseText);
+                } else {
+                    document.location = "https://github.com/goagent/goagent";
+                }
             }
-          }
         }
     })();
     </script>
