--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -18,10 +19,7 @@
         } else {
             var request = new ActiveXObject("Microsoft.XMLHTTP");
         }
-        request.onreadystatechange = callback;
-        request.open("GET", "./README.md", true);
-        request.send();
-        function callback() {
+        request.onreadystatechange = function() {
             if (request.readyState == 4) {
                 if (request.status >= 200 && request.status < 400){
                     document.getElementById("content").innerHTML = marked(request.responseText);
@@ -30,6 +28,8 @@
                 }
             }
         }
+        request.open("GET", "./README.md", true);
+        request.send();
     })();
     </script>
   </body>
