--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
     <link rel="stylesheet" href="github-markdown.css">
-    <script async src="marked.js"></script>
+    <script src="marked.js"></script>
   </head>
   <body style="min-width:200px; max-width:900px; margin:auto; padding:16px;">
     <div id="content" class="markdown-body"></div>
