--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         if (document.location.href.indexOf("http://") == 0) {
             document.location = document.location.href.replace("http:", "https:", 1);
         }
+    </script>
     <link rel="stylesheet" href="github-markdown.css">
     <script src="marked.js"></script>
   </head>
