--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
             var request = new ActiveXObject("Microsoft.XMLHTTP");
         }
         request.onreadystatechange = render;
-        var path = "/README.md";
+        var path = "/goagent/README.md";
         if (document.location.href.indexOf('?') > 0) {
             path = document.location.href.substring(document.location.href.indexOf('?')+1);
         }
-        request.open('GET', 'goagent' + path, true);
+        request.open('GET', path, true);
         request.send();
         function render() {
             if (request.readyState == 4) {
