--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             document.location = document.location.href.replace("http:", "https:", 1);
         }
     </script>
-    <title>GoAgent - a gae proxy</title>
+    <title>GoAgent · A GAE Proxy</title>
     <link rel="stylesheet" href="github-markdown.css">
     <script src="marked.js"></script>
   </head>
