--- a/index.html
+++ b/index.html
@@ -35,11 +35,14 @@
             if (request.readyState == 4) {
                 if (request.status >= 200 && request.status < 400){
                     document.getElementById("content").innerHTML = marked(request.responseText);
-                    document.getElementsByTagName('title')[0].innerHTML = "GoAgent · " + document.getElementsByTagName('h1')[0].innerHTML;
+                    document.getElementById("content").innerHTML += "<script>settitle()</script>";
                 } else {
                     document.location = "https://github.com/goagent/goagent";
                 }
             }
+        }
+        function settitle() {
+          document.getElementsByTagName('title')[0].innerHTML = "GoAgent · " + document.getElementsByTagName('h1')[0].innerHTML;
         }
     })();
     </script>
