--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             if (request.readyState == 4) {
                 if (request.status >= 200 && request.status < 400){
                     document.getElementById("content").innerHTML = marked(request.responseText);
-                    document.getElementById("content").innerHTML += "<script>settitle()</script>";
+                    //document.getElementById("content").innerHTML += "<script>settitle()</script>";
                 } else {
                     document.location = "https://github.com/goagent/goagent";
                 }
