--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
         function render() {
             if (request.readyState == 4) {
                 if (request.status >= 200 && request.status < 400){
-                    document.getElementById("content").innerHTML = marked(request.responseText);
-                    document.title = "GoAgent · " + document.getElementsByTagName('h1')[0].innerHTML;
+                    var text = request.responseText;
+                    document.getElementById("content").innerHTML = marked(text);
+                    document.title = "GoAgent · " + text.split("\n")[0].replace("#", "").trim();
                 } else {
                     document.location = "https://github.com/goagent/goagent";
                 }
