--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             document.location = document.location.href.replace("http:", "https:", 1);
         }
     </script>
-    <title>GoAgent · A GAE Proxy</title>
+    <title>GoAgent · </title>
     <link rel="stylesheet" href="github-markdown.css">
     <script src="marked.js"></script>
   </head>
@@ -37,7 +37,9 @@
                     document.getElementById("content").innerHTML = marked(request.responseText);
                     var firstline = request.responseText.split("\n")[0];
                     if (firstline.indexOf('#') == 0) {
-                      document.title = 'GoAgent · ' + firstline.replace(/#*/, '').trim();
+                      document.title += firstline.replace(/#*/, '').trim();
+                    } else {
+                      document.title += 'A GAE Proxy';
                     }
                 } else {
                     document.location = 'https://github.com/goagent/goagent';
