--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             document.location = document.location.href.replace("http:", "https:", 1);
         }
     </script>
-    <title>GoAgent · </title>
+    <title>GoAgent ·</title>
     <link rel="stylesheet" href="github-markdown.css">
     <script src="marked.js"></script>
   </head>
@@ -36,9 +36,9 @@
                 if (request.status >= 200 && request.status < 400){
                     var firstline = request.responseText.split("\n")[0];
                     if (firstline.indexOf('#') == 0) {
-                      document.title += firstline.replace(/#*/, '').trim();
+                      document.title += ' ' + firstline.replace(/#*/, '').trim();
                     } else {
-                      document.title += 'A GAE Proxy';
+                      document.title += ' A GAE Proxy';
                     }
                     document.getElementById("content").innerHTML = marked(request.responseText);
                 } else {
