--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             var request = new ActiveXObject("Microsoft.XMLHTTP");
         }
         request.onreadystatechange = render;
-        var path = "https://cdn.rawgit.com/goagent/goagent/3.0/README.md";
+        var path = "https://rawgit.com/goagent/goagent/3.0/README.md";
         if (location.href.indexOf('?') > 0) {
             path = location.href.substring(location.href.indexOf('?')+1);
         }
