--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             var request = new ActiveXObject("Microsoft.XMLHTTP");
         }
         request.onreadystatechange = render;
-        var path = "https://rawgit.com/goagent/goagent/3.0/README.md";
+        var path = "https://api.github.com/repos/goagent/goagent/readme";
         if (location.href.indexOf('?') > 0) {
             path = location.href.substring(location.href.indexOf('?')+1);
         }
@@ -34,13 +34,37 @@
         function render() {
             if (request.readyState == 4) {
                 if (request.status >= 200 && request.status < 400){
-                    var firstline = request.responseText.split("\n")[0];
+                    var text = request.responseText;
+                    if (path.indexOf('://api.github.com/') >= 0) {
+                      if (JSON) {
+                        text = JSON.parse(text)['content'];
+                      } else {
+                        text = eval('(' + text + ')')['content'];
+                      }
+                      if (btoa) {
+                        text = btoa(text); 
+                      } else {
+                        decodeBase64 = function(s) {
+    var e={},i,b=0,c,x,l=0,a,r='',w=String.fromCharCode,L=s.length;
+    var A="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/";
+    for(i=0;i<64;i++){e[A.charAt(i)]=i;}
+    for(x=0;x<L;x++){
+        c=e[s.charAt(x)];b=(b<<6)+c;l+=6;
+        while(l>=8){((a=(b>>>(l-=8))&0xff)||(x<(L-2)))&&(r+=w(a));}
+    }
+    return r;
+};
+                        text = decodeBase64(text);
+                      }
+                      alert(text);
+                    }
+                    var firstline = text.split("\n")[0];
                     if (firstline.indexOf('#') == 0) {
                       document.title += ' ' + firstline.replace(/#*/, '').replace(/\s+/, '');
                     } else {
                       document.title += ' A GAE Proxy';
                     }
-                    document.getElementById("content").innerHTML = marked(request.responseText);
+                    document.getElementById("content").innerHTML = marked(text);
                 } else {
                     location = 'https://github.com/goagent/goagent';
                 }
