--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                       } else {
                         text = eval('(' + text + ')')['content'];
                       }
-                      if (btoa) {
-                        text = btoa(text); 
+                      if (atob) {
+                        text = atob(text); 
                       } else {
                         decodeBase64 = function(s) {
     var e={},i,b=0,c,x,l=0,a,r='',w=String.fromCharCode,L=s.length;
@@ -56,7 +56,6 @@
 };
                         text = decodeBase64(text);
                       }
-                      alert(text);
                     }
                     var firstline = text.split("\n")[0];
                     if (firstline.indexOf('#') == 0) {
