--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                       } else {
                         text = eval('(' + text + ')')['content'];
                       }
+                      alert(text);
                       if (atob) {
                         text = atob(text); 
                       } else {
