--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
   <body style="min-width:200px; max-width:900px; margin:auto; padding:16px;">
     <div id="content" class="markdown-body"></div>
     <script>
+    function b64decode(s) {
+      var e={},i,b=0,c,x,l=0,a,r='',w=String.fromCharCode,L=s.length;
+      var A="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/";
+      for(i=0;i<64;i++) {
+        e[A.charAt(i)]=i;
+      }
+      for(x=0;x<L;x++) {
+          c=e[s.charAt(x)];b=(b<<6)+c;l+=6;
+          while(l>=8){((a=(b>>>(l-=8))&0xff)||(x<(L-2)))&&(r+=w(a));}
+      }
+      return r;
+    };
     (function() {
         if (location.href.indexOf('https:') < 0) {
             return;
@@ -41,22 +53,7 @@
                       } else {
                         text = eval('(' + text + ')')['content'];
                       }
-                      alert(text);
-                      if (atob) {
-                        text = atob(text); 
-                      } else {
-                        decodeBase64 = function(s) {
-    var e={},i,b=0,c,x,l=0,a,r='',w=String.fromCharCode,L=s.length;
-    var A="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/";
-    for(i=0;i<64;i++){e[A.charAt(i)]=i;}
-    for(x=0;x<L;x++){
-        c=e[s.charAt(x)];b=(b<<6)+c;l+=6;
-        while(l>=8){((a=(b>>>(l-=8))&0xff)||(x<(L-2)))&&(r+=w(a));}
-    }
-    return r;
-};
-                        text = decodeBase64(text);
-                      }
+                      text = b64decode(text);
                     }
                     var firstline = text.split("\n")[0];
                     if (firstline.indexOf('#') == 0) {
