--- a/index.html
+++ b/index.html
@@ -15,18 +15,6 @@
   <body style="min-width:200px; max-width:900px; margin:auto; padding:16px;">
     <div id="content" class="markdown-body"></div>
     <script>
-    function b64decode(s) {
-      var e={},i,b=0,c,x,l=0,a,r='',w=String.fromCharCode,L=s.length;
-      var A="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/";
-      for(i=0;i<64;i++) {
-        e[A.charAt(i)]=i;
-      }
-      for(x=0;x<L;x++) {
-          c=e[s.charAt(x)];b=(b<<6)+c;l+=6;
-          while(l>=8){((a=(b>>>(l-=8))&0xff)||(x<(L-2)))&&(r+=w(a));}
-      }
-      return r;
-    };
     (function() {
         if (location.href.indexOf('https:') < 0) {
             return;
@@ -48,12 +36,7 @@
                 if (request.status >= 200 && request.status < 400){
                     var text = request.responseText;
                     if (path.indexOf('://api.github.com/') >= 0) {
-                      if (JSON) {
-                        text = JSON.parse(text)['content'];
-                      } else {
-                        text = eval('(' + text + ')')['content'];
-                      }
-                      text = b64decode(text);
+                      text = window.atob(JSON.parse(text)['content']);
                     }
                     var firstline = text.split("\n")[0];
                     if (firstline.indexOf('#') == 0) {
