--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             return;
         }
         var path = location.href.substring(location.href.indexOf('?')+1);
-        if (true) {
+        if (false) {
           location = 'https://github.com/goagent/goagent/blob' + path;
           return;
         }
