--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             location = location.href.replace("http:", "https:", 1);
         }
     </script>
-    <title>GoAgent ·</title>
+    <title>GoAgent</title>
     <script src="marked.js"></script>
     <link rel="stylesheet" href="github-markdown.css">
   </head>
@@ -19,15 +19,7 @@
         if (location.href.indexOf('https:') < 0) {
             return;
         }
-        if (location.href.indexOf('?') < 0) {
-            location = 'https://github.com/goagent/goagent';
-            return;
-        }
-        var path = location.href.substring(location.href.indexOf('?')+1);
-        if (true) {
-          location = 'https://github.com/goagent/goagent/blob' + path;
-          return;
-        }
+        var path = "https://api.github.com/repos/goagent/goagent/readme";
         if (window.XMLHttpRequest) {
             var request = new XMLHttpRequest();
         } else {
@@ -39,17 +31,9 @@
         function render() {
             if (request.readyState == 4) {
                 if (request.status >= 200 && request.status < 400){
-                    var text = request.responseText;
-                    if (path.indexOf('://api.github.com/') >= 0) {
-                      //text = JSON.parse(text)['content'];
-                    }
-                    var firstline = text.split("\n")[0];
-                    if (firstline.indexOf('#') == 0) {
-                      document.title += ' ' + firstline.replace(/#*/, '').replace(/\s+/, '');
-                    } else {
-                      document.title += ' A GAE Proxy';
-                    }
-                    document.getElementById("content").innerHTML = marked(text);
+                    var text = JSON.parse(request.responseText)['content'];
+                    var Base64={_keyStr:"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/=",encode:function(e){var t="";var n,r,i,s,o,u,a;var f=0;e=Base64._utf8_encode(e);while(f<e.length){n=e.charCodeAt(f++);r=e.charCodeAt(f++);i=e.charCodeAt(f++);s=n>>2;o=(n&3)<<4|r>>4;u=(r&15)<<2|i>>6;a=i&63;if(isNaN(r)){u=a=64}else if(isNaN(i)){a=64}t=t+this._keyStr.charAt(s)+this._keyStr.charAt(o)+this._keyStr.charAt(u)+this._keyStr.charAt(a)}return t},decode:function(e){var t="";var n,r,i;var s,o,u,a;var f=0;e=e.replace(/[^A-Za-z0-9\+\/\=]/g,"");while(f<e.length){s=this._keyStr.indexOf(e.charAt(f++));o=this._keyStr.indexOf(e.charAt(f++));u=this._keyStr.indexOf(e.charAt(f++));a=this._keyStr.indexOf(e.charAt(f++));n=s<<2|o>>4;r=(o&15)<<4|u>>2;i=(u&3)<<6|a;t=t+String.fromCharCode(n);if(u!=64){t=t+String.fromCharCode(r)}if(a!=64){t=t+String.fromCharCode(i)}}t=Base64._utf8_decode(t);return t},_utf8_encode:function(e){e=e.replace(/\r\n/g,"\n");var t="";for(var n=0;n<e.length;n++){var r=e.charCodeAt(n);if(r<128){t+=String.fromCharCode(r)}else if(r>127&&r<2048){t+=String.fromCharCode(r>>6|192);t+=String.fromCharCode(r&63|128)}else{t+=String.fromCharCode(r>>12|224);t+=String.fromCharCode(r>>6&63|128);t+=String.fromCharCode(r&63|128)}}return t},_utf8_decode:function(e){var t="";var n=0;var r=c1=c2=0;while(n<e.length){r=e.charCodeAt(n);if(r<128){t+=String.fromCharCode(r);n++}else if(r>191&&r<224){c2=e.charCodeAt(n+1);t+=String.fromCharCode((r&31)<<6|c2&63);n+=2}else{c2=e.charCodeAt(n+1);c3=e.charCodeAt(n+2);t+=String.fromCharCode((r&15)<<12|(c2&63)<<6|c3&63);n+=3}}return t}}
+                    document.getElementById("content").innerHTML = marked(Base64.decode(text));
                 } else {
                     location = 'https://github.com/goagent/goagent';
                 }
