--- a/index.html
+++ b/index.html
@@ -8,17 +8,66 @@
             location = location.href.replace("http:", "https:", 1);
         }
     </script>
-    <title>GoAgent</title>
+    <style>
+        body{min-width:200px; max-width:900px; margin:auto; padding:16px;}
+        .markdown-body {-ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; color: #333; overflow: hidden; font-family: "Helvetica Neue", Helvetica, "Segoe UI", Arial, freesans, sans-serif; font-size: 16px; line-height: 1.6; word-wrap: break-word;}
+    </style>
     <script src="marked.js"></script>
-    <link rel="stylesheet" href="github-markdown.css">
   </head>
-  <body style="min-width:200px; max-width:900px; margin:auto; padding:16px;">
+  <body>
     <div id="content" class="markdown-body"></div>
     <script>
-    var Base64={_keyStr:"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/=",encode:function(e){var t="";var n,r,i,s,o,u,a;var f=0;e=Base64._utf8_encode(e);while(f<e.length){n=e.charCodeAt(f++);r=e.charCodeAt(f++);i=e.charCodeAt(f++);s=n>>2;o=(n&3)<<4|r>>4;u=(r&15)<<2|i>>6;a=i&63;if(isNaN(r)){u=a=64}else if(isNaN(i)){a=64}t=t+this._keyStr.charAt(s)+this._keyStr.charAt(o)+this._keyStr.charAt(u)+this._keyStr.charAt(a)}return t},decode:function(e){var t="";var n,r,i;var s,o,u,a;var f=0;e=e.replace(/[^A-Za-z0-9\+\/\=]/g,"");while(f<e.length){s=this._keyStr.indexOf(e.charAt(f++));o=this._keyStr.indexOf(e.charAt(f++));u=this._keyStr.indexOf(e.charAt(f++));a=this._keyStr.indexOf(e.charAt(f++));n=s<<2|o>>4;r=(o&15)<<4|u>>2;i=(u&3)<<6|a;t=t+String.fromCharCode(n);if(u!=64){t=t+String.fromCharCode(r)}if(a!=64){t=t+String.fromCharCode(i)}}t=Base64._utf8_decode(t);return t},_utf8_encode:function(e){e=e.replace(/\r\n/g,"\n");var t="";for(var n=0;n<e.length;n++){var r=e.charCodeAt(n);if(r<128){t+=String.fromCharCode(r)}else if(r>127&&r<2048){t+=String.fromCharCode(r>>6|192);t+=String.fromCharCode(r&63|128)}else{t+=String.fromCharCode(r>>12|224);t+=String.fromCharCode(r>>6&63|128);t+=String.fromCharCode(r&63|128)}}return t},_utf8_decode:function(e){var t="";var n=0;var r=c1=c2=0;while(n<e.length){r=e.charCodeAt(n);if(r<128){t+=String.fromCharCode(r);n++}else if(r>191&&r<224){c2=e.charCodeAt(n+1);t+=String.fromCharCode((r&31)<<6|c2&63);n+=2}else{c2=e.charCodeAt(n+1);c3=e.charCodeAt(n+2);t+=String.fromCharCode((r&15)<<12|(c2&63)<<6|c3&63);n+=3}}return t}}
-    function render(readme) {
-        document.getElementById("content").innerHTML = marked(Base64.decode(readme['data']['content']));
+    function b64decode(e) {
+        var key = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/=";
+        var t = "";
+        var n, r, i;
+        var s, o, u, a;
+        var f = 0;
+        e = e.replace(/[^A-Za-z0-9\+\/\=]/g, "");
+        while (f < e.length) {
+            s = key.indexOf(e.charAt(f++));
+            o = key.indexOf(e.charAt(f++));
+            u = key.indexOf(e.charAt(f++));
+            a = key.indexOf(e.charAt(f++));
+            n = s << 2 | o >> 4;
+            r = (o & 15) << 4 | u >> 2;
+            i = (u & 3) << 6 | a;
+            t = t + String.fromCharCode(n);
+            if (u != 64) {
+                t = t + String.fromCharCode(r)
+            }
+            if (a != 64) {
+                t = t + String.fromCharCode(i)
+            }
+        }
+        var t2 = "";
+        var m = 0;
+        var r2 = c1 = c2 = 0;
+        while (m < t.length) {
+            r2 = t.charCodeAt(m);
+            if (r2 < 128) {
+                t2 += String.fromCharCode(r2);
+                m++
+            } else if (r2 > 191 && r2 < 224) {
+                c2 = t.charCodeAt(m + 1);
+                t2 += String.fromCharCode((r2 & 31) << 6 | c2 & 63);
+                m += 2
+            } else {
+                c2 = t.charCodeAt(m + 1);
+                c3 = t.charCodeAt(m + 2);
+                t2 += String.fromCharCode((r2 & 15) << 12 | (c2 & 63) << 6 | c3 & 63);
+                m += 3
+            }
+        }
+        return t2
     }
+
+    function render(readme) {
+        text = b64decode(readme['data']['content']);
+        document.title = 'GoAgent ' + text.split("\n")[0].split(/\s+/)[1];
+        document.getElementById("content").innerHTML = marked(text);
+    }
+
     (function() {
         var script   = document.createElement("script");
         script.type  = "text/javascript";
@@ -26,5 +75,6 @@
         document.body.appendChild(script);
     })();
     </script>
+    <link rel="stylesheet" href="github-markdown.css">
   </body>
 </html>
